manifests/homelab/argocd/NetworkPolicy-argocd-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.2
    helm.sh/chart: argo-cd-10.8.2
  name: argocd-server
  namespace: argocd
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-server
  policyTypes:
    - Ingress
